test/1.4/errors/T_ESTOREDINLINE.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

inline method foo(inline a) {
    /// ERROR ESTOREDINLINE
    saved int sa = 2;
    /// ERROR ESTOREDINLINE
    session int se = 1;
}

// call method to codegen it
method init() {
    foo(5);
}
